fix: ajustado local comando criar arquivo CNAME

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -43,6 +43,10 @@ jobs:
       - name: Build VuePress site
         run: yarn docs:build
 
+      # run build script create file CNAME
+      - name: Create file CNAME
+        run: echo 'ceruttimaicon.js.org' > CNAME
+
       # please check out the docs of the workflow for more details
       # @see https://github.com/crazy-max/ghaction-github-pages
       - name: Deploy to GitHub Pages
@@ -55,7 +59,3 @@ jobs:
         env:
           # @see https://docs.github.com/en/actions/reference/authentication-in-a-workflow#about-the-github_token-secret
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
-      # run build script
-      - name: Create file CNAME
-        run: echo 'ceruttimaicon.js.org' > CNAME
