--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "devDependencies": {
     "@vuepress/client": "2.0.0-beta.59",
+    "@vuepress/theme-default": "2.0.0-beta.59",
     "vite": "4.0.3",
     "vue": "^3.2.45",
     "vuepress": "2.0.0-beta.59"
@@ -17,7 +18,7 @@
   },
   "dependencies": {
     "@vuepress/plugin-search": "2.0.0-beta.59",
-    "@vuepress/shared-utils": "^1.9.7",
+    "@vuepress/shared-utils": "1.9.7",
     "postcss": "8.4.20"
   }
 }
